longhorn/longhorn-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: longhorn-ingress
  namespace: longhorn-system
  annotations:
    # --- Настройки Nginx ---
    # Увеличиваем размер тела (для загрузки бэкапов/образов через UI)
    nginx.ingress.kubernetes.io/proxy-body-size: 10000m
    # Принудительный редирект на HTTPS
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    
    # --- Авторизация (Basic Auth) ---
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: basic-auth
    nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required - Longhorn'
    
    # --- SSL / Cert-Manager ---
    # Укажи здесь имя твоего ClusterIssuer
    cert-manager.io/cluster-issuer: "ca-issuer" 
spec:
  ingressClassName: nginx
  # Секция TLS
  tls:
  - hosts:
    - longhorn.ccsfarm.local
    # Cert-manager создаст этот секрет автоматически
    secretName: longhorn-tls-secret
  rules:
  - host: longhorn.ccsfarm.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: longhorn-frontend
            port:
              number: 80
